Vector in C (重写)

--- a/Vector/legacy/.vscode/tasks.json
+++ b/Vector/legacy/.vscode/tasks.json
@@ -8,6 +8,8 @@
                 "-fdiagnostics-color=always",
                 "-g",
                 "${file}",
+                "${fileDirname}\\generics.c",
+                "${fileDirname}\\linkedlist.c",
                 "${fileDirname}\\vector.c",
                 "-o",
                 "${fileDirname}\\${fileBasenameNoExtension}.exe"
